Update Sponzoring a Sjednocení firma event (#70)
Rozdělení eventu na eventy a sponzoring
Sjednocení eventů do stejné struktury pro osobu a pro firmu (OsobaEvent)
+ fixy některých stávajících chyb a duplicitních zobrazení sponzoringů

--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -110,7 +110,7 @@
             Podpora politických stran
         </div>
         <div class="new-p">
-            @WebUtil.LowBox(80, Model.Description(true, m => m.Type == (int)HlidacStatu.Lib.Data.FirmaEvent.Types.Sponzor))
+            @WebUtil.LowBox(80, Model.SponzoringToHtml())
         </div>
     </div>}
             </div>
