--- a/Web.Statu/Views/Home/Detail_Child_vazby.cshtml
+++ b/Web.Statu/Views/Home/Detail_Child_vazby.cshtml
@@ -138,7 +138,8 @@
                                         <h3 class="panel-title">@firma.Jmeno</h3>
                                     </div>
                                     <div class="panel-body">
-                                        @Html.Raw(firma.Description(true, m => m.Type == (int)HlidacStatu.Lib.Data.FirmaEvent.Types.Sponzor))
+                                        @*@Html.Raw(firma.Description(true, m => m.Type == (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Sponzor))*@
+                                        @Html.Raw(firma.SponzoringToHtml())
                                     </div>
                                 </div>
                             }
