--- a/Web.Statu/Views/Home/Hledat.cshtml
+++ b/Web.Statu/Views/Home/Hledat.cshtml
@@ -485,46 +485,44 @@
 
 
 @helper RenderOsoby(int numOfOsob)
-{string osobaStatDescription = "";
-                    HlidacStatu.Lib.Data.Osoba osoba1 = Model.Osoby.Results.FirstOrDefault();
-                    if (osoba1 == null)
-                    {
-                        return;
-                    }
+{
+    string osobaStatDescription = "";
+    HlidacStatu.Lib.Data.Osoba osoba1 = Model.Osoby.Results.FirstOrDefault();
+    if (osoba1 == null)
+    {
+        return;
+    }
 
-                    var alldata = osoba1.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny);
+    var alldata = osoba1.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny);
 
-                    var data = osoba1.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny)
-                                    .Where(v => !string.IsNullOrEmpty(v.To.Id))
-                                    .GroupBy(f => f.To.Id, v => v, (ico, v) => new
-                                    {
-                                        ICO = ico,
-                            //FirmaName = v.First().To?.PrintName(),//HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco(ico, true),
-                            //VazbyPerIco = osoba.VazbyProICO(ico),
-                            stat = Firmy.Get(ico).StatistikaRegistruSmluv()
-                                    })
-                                    .OrderByDescending(m => m.stat.Summary().CelkovaHodnotaSmluv).ThenBy(m => m.ICO)
-                                    .ToArray();
+    var data = osoba1.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny)
+        .Where(v => !string.IsNullOrEmpty(v.To.Id))
+        .GroupBy(f => f.To.Id, v => v, (ico, v) => new
+        {
+            ICO = ico,
+            //FirmaName = v.First().To?.PrintName(),//HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco(ico, true),
+            //VazbyPerIco = osoba.VazbyProICO(ico),
+            stat = Firmy.Get(ico).StatistikaRegistruSmluv()
+        })
+        .OrderByDescending(m => m.stat.Summary().CelkovaHodnotaSmluv).ThenBy(m => m.ICO)
+        .ToArray();
 
-                    var osobaStatDescTotalKc = HlidacStatu.Lib.Data.Smlouva.NicePrice(data.Sum(d => d.stat.Summary().CelkovaHodnotaSmluv), html: true, shortFormat: true);
-                    osobaStatDescription = string.Format("{0}{1}",
-                        Devmasters.Lang.Plural.GetWithZero((int)alldata.Count(), "Žádná vazba na firmy", "Celkem vazba na <b>{0} firmu</b>", "Celkem vazba na <b>{0} firmy</b>", "Celkem vazba na <b>{0} firem</b>"),
-                        Devmasters.Lang.Plural.GetWithZero((int)data.Sum(d => d.stat.Summary().PocetSmluv), "."
-                            , ", <b>{0} smlouva</b> v registru smluv za <b>" + osobaStatDescTotalKc + "</b>"
-                            , ";, <b>{0} smlouvy</b> v registru smluv za <b>" + osobaStatDescTotalKc + "</b>"
-                            , ";, <b>{0} smluv</b> v registru smluv za <b>" + osobaStatDescTotalKc) + "</b>"
-                    );
-                    var funkceOsoba = osoba1.Description(true,
-                                   m => m.Type != (int)HlidacStatu.Lib.Data.FirmaEvent.Types.Sponzor
-                                        && m.Type != (int)HlidacStatu.Lib.Data.FirmaEvent.Types.SponzorZuctu,
-                                   2);
-                    string box1Css = "col-sm-4 col-md-3";
-                    string box2Css = "col-sm-8 col-md-9";
-                    if (numOfOsob == 0)
-                    {
-                        box1Css = "col-sm-12";
-                        box2Css = "col-sm-12";
-                    }
+    var osobaStatDescTotalKc = HlidacStatu.Lib.Data.Smlouva.NicePrice(data.Sum(d => d.stat.Summary().CelkovaHodnotaSmluv), html: true, shortFormat: true);
+    osobaStatDescription = string.Format("{0}{1}",
+        Devmasters.Lang.Plural.GetWithZero((int)alldata.Count(), "Žádná vazba na firmy", "Celkem vazba na <b>{0} firmu</b>", "Celkem vazba na <b>{0} firmy</b>", "Celkem vazba na <b>{0} firem</b>"),
+        Devmasters.Lang.Plural.GetWithZero((int)data.Sum(d => d.stat.Summary().PocetSmluv), "."
+            , ", <b>{0} smlouva</b> v registru smluv za <b>" + osobaStatDescTotalKc + "</b>"
+            , ";, <b>{0} smlouvy</b> v registru smluv za <b>" + osobaStatDescTotalKc + "</b>"
+            , ";, <b>{0} smluv</b> v registru smluv za <b>" + osobaStatDescTotalKc) + "</b>"
+    );
+    var funkceOsoba = osoba1.Description(true, e => true, numOfRecords: 2);
+    string box1Css = "col-sm-4 col-md-3";
+    string box2Css = "col-sm-8 col-md-9";
+    if (numOfOsob == 0)
+    {
+        box1Css = "col-sm-12";
+        box2Css = "col-sm-12";
+    }
 
 
     <div class="row" id="osoby">
@@ -540,87 +538,91 @@
         </div>
     </div> <!-- big result -->
 
-                                    <div class="row">
-                                        <div class="@box1Css">
-                                            <div class="person-profile-thumb">
-                                                <a href="@osoba1.GetUrl(true)">
-                                                    <div class="profile-picture" style="background-image: url('@osoba1.GetPhotoUrl(true)')">
-                                                    </div>
-                                                </a>
-                                                <div>
-                                                    <a class="section-title link--blue" href="@osoba1.GetUrl(true)">
-                                                        @osoba1.FullName()
-                                                    </a>
-                                                    <div class="new-p new-p--gray new-p--small">
-                                                        @osoba1.NarozeniYear()
-                                                    </div>
-                                                    <div class="new-p new-p--gray new-p--small">
-                                                        @osoba1.StatusOsoby().ToNiceDisplayName()
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="@box2Css">
+    <div class="row">
+        <div class="@box1Css">
+            <div class="person-profile-thumb">
+                <a href="@osoba1.GetUrl(true)">
+                    <div class="profile-picture" style="background-image: url('@osoba1.GetPhotoUrl(true)')">
+                    </div>
+                </a>
+                <div>
+                    <a class="section-title link--blue" href="@osoba1.GetUrl(true)">
+                        @osoba1.FullName()
+                    </a>
+                    <div class="new-p new-p--gray new-p--small">
+                        @osoba1.NarozeniYear()
+                    </div>
+                    <div class="new-p new-p--gray new-p--small">
+                        @osoba1.StatusOsoby().ToNiceDisplayName()
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="@box2Css">
 
-                                            @if (!string.IsNullOrWhiteSpace(funkceOsoba))
-                                            {
-                            <div class="search-result-label">
-                                Funkce
-                            </div>
-                                                <div class="new-p">
-                                                    @Html.Raw(funkceOsoba)
-                                                </div>}
-                                            @if (false && osoba1.Sponzoring().Count() > 0)
-                                            {
-                            <div class="search-result-label">
-                                Podpora politických stran
-                            </div>
-                                                <div class="new-p">
-                                                    @Html.Raw(osoba1.Description(true,
-                                                            m => m.Type == (int)HlidacStatu.Lib.Data.FirmaEvent.Types.Sponzor,
-                                                            5))
-                                                </div>}
-                                            <div class="search-result-label">
-                                                Angažovanost
-                                            </div>
-                                            <div class="new-p">
-                                                @Html.Raw(osobaStatDescription)
-                                            </div>
+            @if (!string.IsNullOrWhiteSpace(funkceOsoba))
+            {
+                <div class="search-result-label">
+                    Funkce
+                </div>
+                <div class="new-p">
+                    @Html.Raw(funkceOsoba)
+                </div>
+            }
+            @if (false && osoba1.Sponzoring().Count() > 0)
+            {
+                <div class="search-result-label">
+                    Podpora politických stran
+                </div>
+                <div class="new-p">
+                    @Html.Raw(osoba1.SponzoringToHtml(5))
+                </div>
+            }
+            <div class="search-result-label">
+                Angažovanost
+            </div>
+            <div class="new-p">
+                @Html.Raw(osobaStatDescription)
+            </div>
                                             
-                                        </div>
-                                    </div> if (Model.Osoby.Total > 1)
-                                                    {
-                                                        if (numOfOsob > 1)
-                                                        {
-                                    <div class="row" id="osoba" style="margin-top:40px;">
-                                        <div class="col-xs-12">
+        </div>
+    </div> 
+    if (Model.Osoby.Total > 1)
+    {
+        if (numOfOsob > 1)
+        {
+            <div class="row" id="osoba" style="margin-top:40px;">
+                <div class="col-xs-12">
 
-                                            <table class="table table-hover">
-                                                <thead>
-                                                    @SearchResults.OsobaHead()
-                                                </thead>
-                                                <tbody>
-                                                    @foreach (var hit in Model.Osoby.Results.Skip(1).Take(numOfOsob - 1))
-                                                    {
-                            @SearchResults.OsobaRow(this.User, this.Request, hit)}
-                                                </tbody>
-                                            </table>
+                    <table class="table table-hover">
+                        <thead>
+                            @SearchResults.OsobaHead()
+                        </thead>
+                        <tbody>
+                            @foreach (var hit in Model.Osoby.Results.Skip(1).Take(numOfOsob - 1))
+                            {
+                                @SearchResults.OsobaRow(this.User, this.Request, hit)
+                            }
+                        </tbody>
+                    </table>
 
-                                        </div>
-                                    </div> }
+                </div>
+            </div> 
+        }
 
-                                                        if (Model.Osoby.Total > numOfOsob)
-                                                        {
+        if (Model.Osoby.Total > numOfOsob)
+        {
 
-                                    <div style="height: 32px"></div>
-                                                            <div class="row">
-                                                                <div class="col-xs-12">
-                                                                    <a href="/Osoby/hledat?Q=@Url.Encode(Model.Query)&ftx=@Model.OsobaFtx.ToString()" style="font-size:18px">
-                                                                        @Devmasters.Lang.Plural.Get(Model.Osoby.Total, "", "Ukázat všechny {0} nalezené osoby", "Ukázat všech {0} nalezených osob") ukázat&nbsp;<i class="far fa-angle-double-right"></i>
-                                                                    </a>
-                                                                </div>
-                                                            </div> }
-                                                                            } <!-- end big result -->
+            <div style="height: 32px"></div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <a href="/Osoby/hledat?Q=@Url.Encode(Model.Query)&ftx=@Model.OsobaFtx.ToString()" style="font-size:18px">
+                        @Devmasters.Lang.Plural.Get(Model.Osoby.Total, "", "Ukázat všechny {0} nalezené osoby", "Ukázat všech {0} nalezených osob") ukázat&nbsp;<i class="far fa-angle-double-right"></i>
+                    </a>
+                </div>
+            </div> 
+        }
+    } <!-- end big result -->
 }
 
 @helper RenderVZ(int numOfVZ)
