--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -92,39 +92,42 @@ ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n
             </div>
         </div>
         <div class="col-sm-8 col-md-9">
-            @{ int[] types = {
-                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VolenaFunkce,
-                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.PolitickaPracovni,
-                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Politicka,
-                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VerejnaSpravaJine,
-                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VerejnaSpravaPracovni,
-                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Osobni,
-                        (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Jine
-                    };
-                                var funkceOsoba = Model.Description(true,
-                                       m => types.Contains(m.Type),
-                                       20); }
+            @{ 
+                int[] types = {
+                    (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VolenaFunkce,
+                    (int)HlidacStatu.Lib.Data.OsobaEvent.Types.PolitickaPracovni,
+                    (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Politicka,
+                    (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VerejnaSpravaJine,
+                    (int)HlidacStatu.Lib.Data.OsobaEvent.Types.VerejnaSpravaPracovni,
+                    (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Osobni,
+                    (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Jine
+                };
+                var funkceOsoba = Model.Description(true,
+                        m => types.Contains(m.Type),
+                        20); }
             <div class="row">
                 @if (!string.IsNullOrWhiteSpace(funkceOsoba))
                 {
-<div class="col-xs-12 col-sm-6">
-    <div class="search-result-label">
-        Funkce
-    </div>
-    <div class="new-p">
-        @WebUtil.LowBox(80, funkceOsoba)
-    </div>
-</div>}
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="search-result-label">
+                            Funkce
+                        </div>
+                        <div class="new-p">
+                            @WebUtil.LowBox(80, funkceOsoba)
+                        </div>
+                    </div>
+                }
                 @if (Model.Sponzoring().Count() > 0)
                 {
-<div class="col-xs-12 col-sm-6">
-    <div class="search-result-label">
-        Podpora politických stran
-    </div>
-    <div class="new-p">
-        @WebUtil.LowBox(80, Model.Description(true, m => m.Type == (int)HlidacStatu.Lib.Data.FirmaEvent.Types.Sponzor))
-    </div>
-</div>}
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="search-result-label">
+                            Podpora politických stran
+                        </div>
+                        <div class="new-p">
+                            @WebUtil.LowBox(80, Model.SponzoringToHtml())
+                        </div>
+                    </div>
+                }
             </div>
             <hr />
             <div class="new-p">
