--- a/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
+++ b/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
@@ -55,7 +55,7 @@
                 return string.Format("<a href='{0}'>{1}</a>", o.GetUrl(), o.FullNameWithYear(true))
                 + (novacek ? "<span style='padding-left:5px;' title='Nováček ve sněmovně' class='glyphicon glyphicon-star text-success' aria-hidden='true'></span>" :  "")
                 + "<br />"
-                + Devmasters.TextUtil.ShortenText(o.Description(false,m=>m.Type != (int)OsobaEvent.Types.Sponzor,3), 250).Replace("\n", "<br />");
+                + Devmasters.TextUtil.ShortenText(o.Description(false,m=> true, numOfRecords: 3), 250).Replace("\n", "<br />");
             },
             OrderValueRender = (s) => {
                 Osoba o = (Osoba)s;
@@ -108,7 +108,7 @@
         new ReportDataSource.Column() { Name="Sponzor",
             HtmlRender = (s) => {
                 Osoba o = (Osoba)s;
-                var sum = o.Sponzoring().Sum(m=>m.AddInfoNum);
+                var sum = o.Sponzoring().Sum(m=>m.Hodnota);
                 if (sum==0)
                     return "Ne";
                 else
@@ -116,7 +116,7 @@
             },
             OrderValueRender = (s) => {
                 Osoba o = (Osoba)s;
-                var val= o.Sponzoring().Sum(m=>m.AddInfoNum) ;
+                var val= o.Sponzoring().Sum(m=>m.Hodnota) ;
                 return HlidacStatu.Util.RenderData.OrderValueFormat(val);
             }
         },
