--- a/Web.Statu/Views/Home/Reports/21_VladyCR.cshtml
+++ b/Web.Statu/Views/Home/Reports/21_VladyCR.cshtml
@@ -85,7 +85,7 @@ HtmlRender = (s) => {
 Osoba o = (Osoba)s;
 return string.Format("<a href='{0}'>{1}</a>", o.GetUrl(), o.FullNameWithYear(true))
 + "<br />"
-+ Devmasters.TextUtil.ShortenText(o.Description(false,m=>m.Type != (int)OsobaEvent.Types.Sponzor,3), 250).Replace("\n", "<br />");
++ Devmasters.TextUtil.ShortenText(o.Description(false,m=> true, numOfRecords: 3), 250).Replace("\n", "<br />");
 },
 OrderValueRender = (s) => {
 Osoba o = (Osoba)s;
@@ -124,7 +124,7 @@ return HlidacStatu.Util.RenderData.OrderValueFormat(sum);
 new ReportDataSource.Column() { Name="Sponzor polit.stran",
 HtmlRender = (s) => {
 Osoba o = (Osoba)s;
-var sum = o.Sponzoring().Sum(m=>m.AddInfoNum);
+var sum = o.Sponzoring().Sum(m=>m.Hodnota);
 if (sum==0)
 return "Ne";
 else
@@ -132,7 +132,7 @@ return "Celkem&nbsp;" + HlidacStatu.Util.RenderData.NicePrice(sum.Value,html:tru
 },
 OrderValueRender = (s) => {
 Osoba o = (Osoba)s;
-return HlidacStatu.Util.RenderData.OrderValueFormat(o.Sponzoring().Sum(m=>m.AddInfoNum)) ;
+return HlidacStatu.Util.RenderData.OrderValueFormat(o.Sponzoring().Sum(m=>m.Hodnota)) ;
 }
 },
            };
