--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -148,7 +148,7 @@ else
                             addData: Model.ICO)
                         </td>
                     </tr>
-                    
+
                 }
 
 
@@ -176,7 +176,7 @@ else
                 <tr>
                     <th>Majetkové vazby společnosti</th>
                     <td>
-                        <a href="/subjektVazby/@Model.ICO">Hierarchický přehled dceřinných společností</a>
+                        <a href="/subjektVazby/@Model.ICO">Hierarchický přehled dceřiných společností</a>
                     </td>
                 </tr>
             }
@@ -210,7 +210,7 @@ else
                         <br />
                         @WebUtil.AddWatchDog(this.User, "holding:" + Model.ICO, null,
                                          $"Hlídat změny i "
-                                         + Devmasters.Lang.Plural.Get(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Count(), "v <b>jedné dceřinné společnosti</b>", "ve <b>{0} dceřinných společnostech</b>", "v <b>{0} dceřinných společnostech</b>")
+                                         + Devmasters.Lang.Plural.Get(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Count(), "v <b>jedné dceřiné společnosti</b>", "ve <b>{0} dceřiných společnostech</b>", "v <b>{0} dceřiných společnostech</b>")
                                          + "", prefillWDname: "Novinky pro " + Model.Jmeno, btnCss: "btn btn-warning btn-xs", showWDList: false, preBtnText: "")}
                 </td>
             </tr>
@@ -338,7 +338,7 @@ else
                 </td>
                 <td>
                     <script>
-    window.onload = function () {
+                        window.onload = function () {
                             $('#graf').toggle();
                         }</script>
 
@@ -350,10 +350,10 @@ else
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             @{ ReportDataSource rdsSumPerY = ReportDataSource.SimpleReportDataForDateChart("Rok", "Počet smluv",
-                                    statistics
-                                        .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
-                                        .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.CelkovaHodnotaSmluv)
-                                    );
+                                     statistics
+                                         .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
+                                         .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.CelkovaHodnotaSmluv)
+                                     );
 
                                 @UtilChart.RenderReportChart("Hodnota smluv", UtilChart.SimpleBarChart(
                                                    true, true, 150, "rdsSumPerY",
@@ -363,10 +363,10 @@ else
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             @{ ReportDataSource rdsCountPerY = ReportDataSource.SimpleReportDataForDateChart("Rok", "Počet smluv",
-                                    statistics
-                                        .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
-                                        .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.PocetSmluv)
-                                    );
+                                     statistics
+                                         .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
+                                         .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.PocetSmluv)
+                                     );
 
                                 @UtilChart.RenderReportChart("Počet smluv", UtilChart.SimpleBarChart(
                                                   true, true, 150, "rdsCountPerY",
@@ -376,10 +376,10 @@ else
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             @{ ReportDataSource rdsbezCenyPerY = ReportDataSource.SimpleReportDataForDateChart("Rok", "% smluv",
-                                    statistics
-                                        .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
-                                        .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.PercentSmluvBezCeny * 100)
-                                    );
+                                     statistics
+                                         .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
+                                         .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.PercentSmluvBezCeny * 100)
+                                     );
 
                                 @UtilChart.RenderReportChart("% smluv s utajenou cenou ", UtilChart.SimpleBarChart(
                                                 true, true, 150, "rdsbezCenyPerY",
@@ -391,10 +391,10 @@ else
                         {
                             <div class="col-xs-12 col-sm-6 col-md-4">
                                 @{ ReportDataSource rdsPolitikPerYKc = ReportDataSource.SimpleReportDataForDateChart("Rok", "Hodnota smluv",
-                                        statistics
-                                        .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
-                                        .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.SumKcSmluvSponzorujiciFirmy)
-                                        );
+                                         statistics
+                                         .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
+                                         .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.SumKcSmluvSponzorujiciFirmy)
+                                         );
 
                                     @UtilChart.RenderReportChart("Hodnota smluv s vazbou na politiky", UtilChart.SimpleBarChart(
                                                 true, true, 150, "rdsPolitikPerYKc",
@@ -404,10 +404,10 @@ else
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
                                 @{ ReportDataSource rdsPolitikPerY = ReportDataSource.SimpleReportDataForDateChart("Rok", "% smluv",
-                                        statistics
-                                        .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
-                                        .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.PercentSmluvPolitiky * 100)
-                                        );
+                                         statistics
+                                         .Where(k => k.Year >= chartMinDate && k.Year <= chartMaxDate)
+                                         .ToDictionary(k => new DateTime(k.Year, 1, 1), v => (decimal)v.Value.PercentSmluvPolitiky * 100)
+                                         );
 
                                     @UtilChart.RenderReportChart("% smluv s vazbou na politiky", UtilChart.SimpleBarChart(
                                                                true, true, 150, "rdsPolitikPerY",
@@ -424,7 +424,7 @@ else
                 )
             {
                 <tr>
-                    <th>Souhrnné statistiky<br />pro subjekt a všechny<br />dceřinné společnosti (@HlidacStatu.Util.RenderData.NiceNumber(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Length))<br />od 2016</th>
+                    <th>Souhrnné statistiky<br />pro subjekt a všechny<br />dceřiné společnosti (@HlidacStatu.Util.RenderData.NiceNumber(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Length))<br />od 2016</th>
                     <td>
                         @Html.Raw(NiceString($"/hledat?q=holding:{Model.ICO}", (int)holdingSummaryAfter2016.PocetSmluv, holdingSummaryAfter2016.CelkovaHodnotaSmluv))<br />
                         @(holdingSummaryAfter2016.PercentSmluvBezCeny.ToString("P1")) smluv se skrytou cenou<br />
@@ -438,10 +438,10 @@ else
                 </tr>
             }
 
-            @if (Model.PatrimStatu() 
+            @if (Model.PatrimStatu()
                 && summarryAfter2016.PocetSmluvSponzorujiciFirmy > 0)
             {
-                
+
                 <tr>
                     <th>Smlouvy s vazbou na politiky</th>
                     <td id="_smlouvy_s_politiky">
@@ -460,7 +460,7 @@ else
                             <tbody>
                                 @foreach (var bs in statistics
                                     .Where(y => statistics.YearsAfter2016().Contains(y.Year))
-                                    .OrderBy(y=>y.Year) )
+                                    .OrderBy(y => y.Year))
                                 {
                                     <tr>
                                         <td>@bs.Year</td>
@@ -484,17 +484,34 @@ else
                     </td>
                 </tr>
             }
-            @if (!string.IsNullOrEmpty(Model.Description(false)))
+
+            @{
+                string dalsiInfo = Model.Description(false);
+            }
+            @if (!string.IsNullOrEmpty(dalsiInfo))
             {
 
                 <tr>
                     <th>Další info</th>
                     <td>
-                        @Html.Raw(Model.Description(true))
+                        @Html.Raw(dalsiInfo)
                     </td>
                 </tr>
             }
 
+            @{ 
+                string sponzoring = Model.SponzoringToHtml();
+            }
+            @if (!string.IsNullOrEmpty(sponzoring))
+            {
+
+                <tr>
+                    <th>Sponzoring</th>
+                    <td>
+                        @Html.Raw(sponzoring)
+                    </td>
+                </tr>
+            }
 
 
             @if (Model.IsNespolehlivyPlatceDPH())
@@ -568,9 +585,9 @@ else
 
 
             @{ var dotaceAggs = new Nest.AggregationContainerDescriptor<HlidacStatu.Lib.Data.Dotace.Dotace>()
-                                          .Sum("souhrn", s => s
-                                              .Field(f => f.DotaceCelkem)
-                                          );
+                                           .Sum("souhrn", s => s
+                                               .Field(f => f.DotaceCelkem)
+                                           );
                 var dotaceSearch = new HlidacStatu.Lib.Data.Dotace.DotaceService().SimpleSearch("ico:" + Model.ICO, 1, 1,
                     HlidacStatu.Lib.Searching.DotaceSearchResult.DotaceOrderResult.FastestForScroll, false,
                     dotaceAggs, exactNumOfResults: true);
@@ -653,7 +670,7 @@ else
                             else
                             {
                                 <p>
-                                    <b>@Devmasters.Lang.Plural.Get(items.Count, "Jedna dceřinná společnost", "{0} dceřinné společnosti", "{0} dceřinných společností")</b>
+                                    <b>@Devmasters.Lang.Plural.Get(items.Count, "Jedna dceřiná společnost", "{0} dceřiné společnosti", "{0} dceřiných společností")</b>
                                     (z celkem @HlidacStatu.Util.RenderData.NiceNumber(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Length))
                                     firmy @Devmasters.TextUtil.ShortenText(Model.Jmeno, 35)
 
@@ -685,7 +702,7 @@ else
                             else
                             {
                                 <p>
-                                    <b>@Devmasters.Lang.Plural.Get(items.Count, "Jedna dceřinná společnost", "{0} dceřinné společnosti", "{0} dceřinných společností")</b>
+                                    <b>@Devmasters.Lang.Plural.Get(items.Count, "Jedna dceřiná společnost", "{0} dceřiné společnosti", "{0} dceřiných společností")</b>
                                     firmy @Devmasters.TextUtil.ShortenText(Model.Jmeno, 35) nedostaly žádné dotace.
                                 </p>}
                         }
