link to edit person from persondetail

--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -23,6 +23,13 @@
         <h1 class="new-title text-left" style="margin-top: 10px;">
             @WebUtil.AddBookmark(this.User, Model)
             @Model.FullNameWithYear()
+
+            @if (this.User?.IsInRole("canEditData") == true)
+            {
+                <a href="/manage/PersonDetail/@Model.InternalId" style="font-size:0.8em">
+                    <i class="far fa-axe"></i>
+                </a>
+            }
         </h1>
         <hr />
         <div class="col-sm-4 col-md-3">
