--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -316,7 +316,7 @@
                         }
 
 
-                        var dsQuery = $"( OsobaId:{Model.NameId} ) OR {Model.FullNameToQuery(true)} ";
+                        var dsQuery = $"( OsobaId:{Model.NameId} ) ";
                         var dsSearch = HlidacStatu.Lib.Data.Search.DatasetMultiResult.GeneralSearch(dsQuery, pageSize: 5);
                         var ftxQuery = Model.FullName();
                         tabs.AddRange(dsSearch.Results.Where(m => m.Total > 0).OrderByDescending(m => m.Total)
