Insolvence datum narozeni fix

--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -157,11 +157,11 @@ else if (item.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny
             {
                 foreach (var o in item.Dluznici.Take(2))
                 {
-                    <div>@Html.KIndexLabelLink(o.ICO)@Html.Raw(o.ToHtml())</div> 
+                    <div>@Html.KIndexLabelLink(o.ICO)@Html.Raw(o.ToHtml(!string.IsNullOrEmpty(o.OsobaId)))</div> 
                 }
                 if (item.Dluznici.Count == 3)
                 {
-                    <div>@Html.KIndexLabelLink(item.Dluznici[2].ICO)@Html.Raw(item.Dluznici[2].ToHtml())</div> 
+                    <div>@Html.KIndexLabelLink(item.Dluznici[2].ICO)@Html.Raw(item.Dluznici[2].ToHtml(!string.IsNullOrEmpty(item.Dluznici[2].OsobaId)))</div> 
                 }
                 else if (item.Dluznici.Count > 3)
                 {
@@ -173,11 +173,11 @@ else if (item.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny
             {
                 foreach (var o in item.Veritele.Take(2))
                 {
-                    <div>@Html.KIndexLabelLink(o.ICO)@Html.Raw(o.ToHtml())</div> 
+                    <div>@Html.KIndexLabelLink(o.ICO)@Html.Raw(o.ToHtml(!string.IsNullOrEmpty(o.OsobaId)))</div> 
                 }
                 if (item.Veritele.Count == 3)
                 {
-                    <div>@Html.KIndexLabelLink(item.Veritele[2].ICO)@Html.Raw(item.Veritele[2].ToHtml())</div> 
+                    <div>@Html.KIndexLabelLink(item.Veritele[2].ICO)@Html.Raw(item.Veritele[2].ToHtml(!string.IsNullOrEmpty(item.Veritele[2].OsobaId)))</div> 
                 }
                 else if (item.Veritele.Count > 3)
                 {
