--- a/Web.Statu/Views/Home/KapacitaKazdeNemocnice.cshtml
+++ b/Web.Statu/Views/Home/KapacitaKazdeNemocnice.cshtml
@@ -5,7 +5,7 @@
 @using HlidacStatu.Web.Models
 @using HlidacStatu.Web.Framework
 
-@{ ViewBag.Title = "Změny kapacit jednotlivých nemocnic za poslední dny";
+@{ ViewBag.Title = "Vytížen íjednotlivých nemocnic za poslední 2 měsíce";
 
 
     }
